@@ -1,7 +1,6 @@
 package pe.edu.vallegrande.ms_catalogo_vehiculos.config;
 
 import java.util.Arrays;
-import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -15,40 +14,44 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        
-        // Permitir orígenes específicos
-        corsConfiguration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://localhost:3000",
-            "http://127.0.0.1:5173"
-        ));
-        
+
+        // Permitir orígenes específicos (Frontend)
+        corsConfiguration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "https://localhost:*"));
+
         // Permitir credenciales
         corsConfiguration.setAllowCredentials(true);
-        
+
         // Métodos HTTP permitidos
         corsConfiguration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
-        ));
-        
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"));
+
         // Headers permitidos
-        corsConfiguration.setAllowedHeaders(List.of("*"));
-        
+        corsConfiguration.setAllowedHeaders(Arrays.asList(
+                "*",
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With"));
+
         // Headers expuestos
         corsConfiguration.setExposedHeaders(Arrays.asList(
-            "Access-Control-Allow-Origin",
-            "Access-Control-Allow-Credentials",
-            "Authorization",
-            "Content-Type"
-        ));
-        
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials",
+                "Authorization",
+                "Content-Type",
+                "X-Total-Count"));
+
         // Tiempo de cache para preflight (1 hora)
         corsConfiguration.setMaxAge(3600L);
-        
+
         // Aplicar a todas las rutas
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
-        
+
         return new CorsWebFilter(source);
     }
 }
